# delphesfcc

./: CMakeLists.txt  README.md  delphes_card_FCC_basic_noTreeWriter.tcl  init.sh
cmake/: Finddelphes.cmake
example/: CMakeLists.txt  simplewriteWithDelphes.cc
